--- a/myblog/blog/templates/delete_post.html
+++ b/myblog/blog/templates/delete_post.html
@@ -9,15 +9,19 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-    <h1>Delete Blog Post</h1>
-    <br/><br/>
-    <h3>Delete: {{ post.title }}</h3>
-    <br/>
-    <form method="POST">
-        {% csrf_token %}
-        <strong>Are you sure?</strong><br/><br/>
-        <button class="btn btn-secondary">Delete Post</button>
-    </form>
+    {% if user.id == post.author.id %}
+        <h1>Delete Blog Post</h1>
+        <br/><br/>
+        <h3>Delete: {{ post.title }}</h3>
+        <br/>
+        <form method="POST">
+            {% csrf_token %}
+            <strong>Are you sure?</strong><br/><br/>
+            <button class="btn btn-secondary">Delete Post</button>
+        </form>
+    {% else %}
+        You're not allowed here!
+    {% endif %}
 {% else %}
     <h3>You're not allowed here</h3>
 {% endif %}
