--- a/myblog/blog/templates/home.html
+++ b/myblog/blog/templates/home.html
@@ -10,17 +10,23 @@
 {% block content %}
 <h1>Post</h1>
 <ul>
-{% for post in object_list %}
-    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }}
+    {% for post in object_list %}
+    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - <a href="{% url 'category' post.category|slugify %}">{{ post.category }}</a> - {{ post.author.first_name }}
         {{ post.author.last_name }} - {{ post.post_date }} <small>
             {% if user.is_authenticated %}
-                <a href="{% url 'update_post' post.pk %}">(Edit)</a>
-                <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+                {% if user.id == post.author.id %}
+                    <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+                    <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+                {% endif %}
             {% endif %}
         </small> <br/>
-    {{ post.body|slice:":200"|safe }}</li>
-{% endfor %}
+        {{ post.body|slice:":200"|safe }}
+    </li>
+    {% endfor %}
 </ul>
+
+<!--{% for item in cat_menu-->
+
 
 {% endblock %}
 </body>
