--- a/myblog/blog/templates/add_post.html
+++ b/myblog/blog/templates/add_post.html
@@ -11,9 +11,10 @@
 {% if user.is_authenticated %}
     <h1>Add Blog Post</h1>
     <br/><br/>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_ul }}
+        {{ form.media }}
+        {{ form.as_p }}
         <button class="btn btn-secondary">Post</button>
     </form>
 <script>
