--- a/myblog/blog/templates/update_post.html
+++ b/myblog/blog/templates/update_post.html
@@ -14,7 +14,8 @@
         <br/><br/>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_ul }}
+            {{ form.media }}
+            {{ form.as_p }}
             <button class="btn btn-secondary">Update</button>
         </form>
     {% else %}
