--- a/myblog/members/templates/registration/edit_profile.html
+++ b/myblog/members/templates/registration/edit_profile.html
@@ -8,7 +8,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Edit Profile</h1>
+<h1>Edit Settings</h1>
 <br/><br/>
 {{ user.profile.bio }}
 <form method="POST">
