--- a/myblog/blog/templates/base.html
+++ b/myblog/blog/templates/base.html
@@ -50,27 +50,6 @@
                 <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
             </li>
 
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Profile
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Setting</a>
-                    {% if user.profile.id %}
-                    <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
-                    <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
-                    {% else %}
-                    <a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile Page</a>
-                    {% endif %}
-
-                </div>
-            </li>
-
-
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
             {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'register' %}">Register</a>
@@ -80,6 +59,29 @@
             </li>
             {% endif %}
         </ul>
+        {% if user.is_authenticated %}
+        <ul class="navbar-nav ml-auto">
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    {{ user.first_name }} {{ user.last_name }}
+                </a>
+                <div class="dropdown-menu dropdown-menu right" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Setting</a>
+                    {% if user.profile.id %}
+                    <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>
+                    <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
+                    {% else %}
+                    <a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile Page</a>
+                    {% endif %}
+
+                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                </div>
+            </li>
+
+        </ul>
+        {% endif %}
     </div>
 </nav>
 <br/>
