--- a/myblog/members/templates/registration/login.html
+++ b/myblog/members/templates/registration/login.html
@@ -12,9 +12,18 @@
 <br/><br/>
 <form method="POST">
     {% csrf_token %}
-    {{ form.as_ul }}
+    <div class="form-group">
+        <input type="text" class="form-control" name="username" placeholder="Username">
+    </div>
+    <div class="form-group">
+        <input type="password" class="form-control" name="password" placeholder="Password">
+
+    </div>
+    <br/>
     <button class="btn btn-secondary">Login</button>
 </form>
+<br/><br/>
+Not Registered? Sign up <a href="{% url 'register' %}">Here</a>
 {% endblock %}
 </body>
 </html>
