--- a/myblog/blog/templates/categories.html
+++ b/myblog/blog/templates/categories.html
@@ -9,21 +9,24 @@
 
 {% block content %}
 {% if category_posts %}
-    <h1>{{ cats }}</h1>
-    <ul>
+<h1>{{ cats }}</h1>
+<ul>
     {% for post in category_posts %}
-        <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.category }} - {{ post.author.first_name }}
-            {{ post.author.last_name }} - {{ post.post_date }} <small>
-                {% if user.is_authenticated %}
-                    <a href="{% url 'update_post' post.pk %}">(Edit)</a>
-                    <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
-                {% endif %}
-            </small> <br/>
-        {{ post.body|slice:":200"|safe }}</li>
+    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.category }} -
+        {{ post.author.first_name }} {{ post.author.last_name }} - {{ post.post_date }} <small>
+            {% if user.is_authenticated %}
+            {% if user.id == post.author.id %}
+            <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+            <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+            {% endif %}
+        </small> <br/>
+        {{ post.body|slice:":200"|safe }}
+    </li>
+    {% endif %}
     {% endfor %}
-    </ul>
+</ul>
 {% else %}
-    <h2>This page is not found</h2>
+<h2>This page is not found</h2>
 {% endif %}
 {% endblock %}
 </body>
